--- a/templates/login.html
+++ b/templates/login.html
@@ -14,8 +14,8 @@ content%}
             a Tropic account.
           </p>
           <!--  -->
-          <div style="width: 25%; margin: 0 auto">
-            <div class="card" style="width: 25rem">
+          <div >
+            <div class="card" style="width: 18rem">
               <div class="card-body">
                 <form action="/login" method="POST">
                   <div class="mb-3 d-flex justify-content-center input-group">
