--- a/templates/products.html
+++ b/templates/products.html
@@ -105,10 +105,11 @@ content%}
   <table id="example" class="table table-striped">
     <thead>
       <tr>
-        <th>product id</th>
-        <th>product name</th>
-        <th>buying p</th>
-        <th>selling p</th>
+        <th>Product Id</th>
+        <th>Product Name</th>
+        <th>Buying Price</th>
+        <th>Selling Price</th>
+        <th>Edit Product</th>
       </tr>
     </thead>
     <tbody>
@@ -118,10 +119,240 @@ content%}
         <td>{{product[1]}}</td>
         <td>{{product[2]}}</td>
         <td>{{product[3]}}</td>
+        <td>
+          <!-- Button trigger modal -->
+          <button
+            type="button"
+            class="btn btn-primary"
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModal{{product[0]}}"
+          >
+            Edit
+          </button>
+
+          <!-- Modal -->
+          <div
+            class="modal fade"
+            id="exampleModal{{product[0]}}"
+            tabindex="-1"
+            aria-labelledby="exampleModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1
+                    class="modal-title fs-5"
+                    id="exampleModalLabel{{product[0]}}"
+                  >
+                    Modal title
+                  </h1>
+                  <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"
+                  ></button>
+                </div>
+                <div class="modal-body">
+                  <form action="/edited_prod" method="POST">
+                    <div class="mb-3">
+                      <input type="hidden" value="{{product[0]}}" name="id" />
+                      <label for="" class="form-label">Product Name</label>
+                      <input
+                        type="Text"
+                        class="form-control"
+                        id="exampleInputEmail1"
+                        aria-describedby="emailHelp"
+                        name="name1"
+                        value="{{product[1]}}"
+                      />
+                      <input type="" value="{{product[2]}}" name="name2" />
+                      <label for="" class="form-label">Buying Price</label>
+                      <input
+                        type="number"
+                        class="form-control"
+                        id="exampleInputEmail1"
+                        aria-describedby="emailHelp"
+                        name="name2"
+                        value="{{product[2]}}"
+                      />
+                      <input type="" value="{{product[3]}}" name="name3" />
+                      <label for="" class="form-label">Selling Price</label>
+                      <input
+                        type="number"
+                        class="form-control"
+                        id="exampleInputEmail1"
+                        aria-describedby="emailHelp"
+                        name="name3"
+                        value="{{product[3]}}"
+                      />
+                    </div>
+                    <button type="submit" class="btn btn-primary">
+                      Submit
+                    </button>
+                    <div class="modal-footer">
+                      <button
+                        type="button"
+                        class="btn btn-secondary"
+                        data-bs-dismiss="modal"
+                      >
+                        Close
+                      </button>
+                      <button type="button" class="btn btn-primary">
+                        Edit
+                      </button>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </td>
       </tr>
       {% endfor%}
     </tbody>
   </table>
+</div>
+
+<!-- product 0 -->
+<div class="container mt-5" id="sunset">
+  <div class="card border-0">
+    <div class="card-header">
+      <h5>
+        Sunset sale with up to 25% Off<span
+          class="float-end text-decoration-underline"
+          >See All ></span
+        >
+      </h5>
+    </div>
+    <div class="card-body">
+      <!-- start -->
+      <div class="card-group">
+        <div class="card">
+          <img src="static/car1.jpg" class="card-img-top" alt="..." />
+          <div style="position: absolute; top: 5px; left: 5px">
+            <span class="badge rounded-pill text-bg-warning">-37%</span>
+          </div>
+          <div class="card-body">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <h6 class="card-title mt-2">Fitted Sheet Waterproof...</h6>
+            <p class="card-text">KSh 694</p>
+            <p class="card-text text-decoration-line-through">KSh 2200</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-body-secondary"
+              ><div class="d-grid gap-2">
+                <button class="btn btn-warning" type="button">
+                  Add to Cart
+                </button>
+              </div></small
+            >
+          </div>
+        </div>
+        <div class="card">
+          <img src="static/car1.jpg" class="card-img-top" alt="..." />
+          <div style="position: absolute; top: 5px; left: 5px">
+            <span class="badge rounded-pill text-bg-warning">-37%</span>
+          </div>
+          <div class="card-body">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <h6 class="card-title mt-2">Fitted Sheet Waterproof...</h6>
+            <p class="card-text">KSh 694</p>
+            <p class="card-text text-decoration-line-through">KSh 2200</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-body-secondary"
+              ><div class="d-grid gap-2">
+                <button class="btn btn-warning" type="button">
+                  Add to Cart
+                </button>
+              </div></small
+            >
+          </div>
+        </div>
+        <div class="card">
+          <img src="static/car1.jpg" class="card-img-top" alt="..." />
+          <div style="position: absolute; top: 5px; left: 5px">
+            <span class="badge rounded-pill text-bg-warning">-37%</span>
+          </div>
+          <div class="card-body">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <h6 class="card-title mt-2">Fitted Sheet Waterproof...</h6>
+            <p class="card-text">KSh 694</p>
+            <p class="card-text text-decoration-line-through">KSh 2200</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-body-secondary"
+              ><div class="d-grid gap-2">
+                <button class="btn btn-warning" type="button">
+                  Add to Cart
+                </button>
+              </div></small
+            >
+          </div>
+        </div>
+        <div class="card">
+          <img src="static/car1.jpg" class="card-img-top" alt="..." />
+          <div style="position: absolute; top: 5px; left: 5px">
+            <span class="badge rounded-pill text-bg-warning">-37%</span>
+          </div>
+          <div class="card-body">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <h6 class="card-title mt-2">Fitted Sheet Waterproof...</h6>
+            <p class="card-text">KSh 694</p>
+            <p class="card-text text-decoration-line-through">KSh 2200</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-body-secondary"
+              ><div class="d-grid gap-2">
+                <button class="btn btn-warning" type="button">
+                  Add to Cart
+                </button>
+              </div></small
+            >
+          </div>
+        </div>
+        <div class="card">
+          <img src="static/car1.jpg" class="card-img-top" alt="..." />
+          <div style="position: absolute; top: 5px; left: 5px">
+            <span class="badge rounded-pill text-bg-warning">-37%</span>
+          </div>
+          <div class="card-body">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <h6 class="card-title mt-2">Fitted Sheet Waterproof...</h6>
+            <p class="card-text">KSh 694</p>
+            <p class="card-text text-decoration-line-through">KSh 2200</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-body-secondary"
+              ><div class="d-grid gap-2">
+                <button class="btn btn-warning" type="button">
+                  Add to Cart
+                </button>
+              </div></small
+            >
+          </div>
+        </div>
+      </div>
+      <!-- end -->
+    </div>
+  </div>
 </div>
 
 <!-- product 1 -->
@@ -263,6 +494,68 @@ content%}
   </div>
 </div>
 
+<!--  -->
+<div class="container mt-5" id="moreproducts">
+  <div class="row g-3">
+    <div class="col-12 col-md-4">
+      <div class="card h-100">
+        <img src="static/plumbing.jpg" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Plumbing and Sanitary</h5>
+          <p class="card-text">
+            Items: Pipes, taps, PVC fittings, sinks, water tanks, toilet bowls
+          </p>
+        </div>
+        <div class="card-footer">
+          <small class="text-body-secondary"
+            ><div class="d-grid">
+              <button class="btn btn-primary" type="button">Explore</button>
+            </div></small
+          >
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-md-4">
+      <div class="card h-100">
+        <img src="static/paint.jpg" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Paints and Finishes</h5>
+          <p class="card-text">
+            Products: Paints, thinners, brushes, varnish, waterproofing products
+            Services: Color mixing, paint consultation Popular Brands: Crown,
+            Sadolin, Duracoat
+          </p>
+        </div>
+        <div class="card-footer">
+          <small class="text-body-secondary"
+            ><div class="d-grid">
+              <button class="btn btn-primary" type="button">Explore</button>
+            </div></small
+          >
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-md-4">
+      <div class="card h-100">
+        <img src="static/improvements.jpg" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Home Improvement & Fixtures</h5>
+          <p class="card-text">
+            Products: Door locks, hinges, cabinet handles, shelves, wall
+            brackets
+          </p>
+        </div>
+        <div class="card-footer">
+          <div class="d-grid">
+            <button class="btn btn-primary" type="button">Explore</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!--  -->
+
 <!-- product 2 -->
 <div class="container mt-5">
   <div class="card border-0">
@@ -403,18 +696,37 @@ content%}
 </div>
 
 <div class="bg-black text-white p-5 mt-5">
-  <div class="form-floating">
-    <textarea
-      class="form-control"
-      placeholder="Leave a comment here"
-      id="floatingTextarea2"
-      style="height: 100px"
-    ></textarea>
-    <label for="floatingTextarea2">Comments</label>
-  </div>
-  <div class="col-auto mt-3">
-    <button type="submit" class="btn btn-secondary mb-3">Send</button>
-  </div>
+  <form action="https://api.web3forms.com/submit" method="POST">
+    <input
+      type="hidden"
+      name="access_key"
+      value="23900238-7c43-4845-a6f6-f753fb5a82b2"
+    />
+    <div class="input-group">
+      <span class="input-group-text" id="basic-addon1"
+        ><i class="fa-solid fa-envelope"></i
+      ></span>
+      <input
+        name="From"
+        type="email"
+        type="email"
+        class="form-control"
+        id="exampleInputEmail1"
+        aria-describedby="emailHelp"
+        placeholder="Email"
+      />
+    </div><br>
+    <div class="input-group">
+      <textarea placeholder="Comment" class="form-control" id="exampleFormControlTextarea1"></textarea><br />
+      <input
+        type="checkbox"
+        name="botcheck"
+        class="hidden"
+        style="display: none"
+      />
+    </div><br>
+    <button type="submit" class="btn btn-secondary mb-3"><i class="fa-solid fa-paper-plane"></i></button>
+  </form>
 </div>
 
 {% endblock %}
